Trying to fix white space on all pages not the front page

--- a/themes/benamer/css/style.css
+++ b/themes/benamer/css/style.css
@@ -2724,6 +2724,11 @@ body.page-node main .aurora-section-second {
 }
 @media (min-width: 1024px) {
   body.page-node main .aurora-section-second {
+    width: 97.91667%;
+    clear: right;
+    float: right;
+    margin-left: 0;
+    margin-right: 1.04167%;
     height: 360px;
     clear: both;
     margin-top: inherit;
@@ -2791,6 +2796,11 @@ body.page-search main .aurora-section-second {
 }
 @media (min-width: 1024px) {
   body.page-search main .aurora-section-second {
+    width: 97.91667%;
+    clear: right;
+    float: right;
+    margin-left: 0;
+    margin-right: 1.04167%;
     height: 360px;
     clear: both;
     margin-top: inherit;
