--- a/themes/benamer/sass/partials/layout/_layout.scss
+++ b/themes/benamer/sass/partials/layout/_layout.scss
@@ -109,7 +109,7 @@ body.page-node main .aurora-section-second {
     clear: both;
   }
   @include breakpoint($desktop) {
-    // @include grid-span(12, 1, $output-style: 'float');
+    @include grid-span(12, 1, $output-style: 'float');
     height: 360px;
     clear: both;
     margin-top: inherit;
@@ -160,7 +160,7 @@ body.page-search main .aurora-section-second {
     clear: both;
   }
   @include breakpoint($desktop) {
-    // @include grid-span(12, 1, $output-style: 'float');
+    @include grid-span(12, 1, $output-style: 'float');
     height: 360px;
     clear: both;
     margin-top: inherit;
